{
  "This folder is empty.": "هذا المجلد فارغ.",
  "Delete": "يمسح",
  "Delete item": "حذف العنصر",
  "Cancel": "يلغي",
  "Item name": "اسم العنصر",
  "Save": "يحفظ",
  "Play audio": "تشغيل الصوت",
  "Save PDF": "حفظ قوات الدفاع الشعبي",
  "Save file": "احفظ الملف",
  "Details": "تفاصيل",
  "Edit": "يحرر",
  "Share": "يشارك",
  "Home": "بيت",
  "Profile": "حساب تعريفي",
  "Shared Items": "العناصر المشتركة",
  "Shared": "مشترك",
  "Type": "يكتب",
  "Size": "مقاس",
  "Creator": "المنشئ",
  "Creation Date": "تاريخ الإنشاء",
  "Last update": "اخر تحديث",
  "Please check your email for your login link.": "يرجى التحقق من بريدك الإلكتروني للحصول على رابط تسجيل الدخول الخاص بك.",
  "Member ID": "معرف العضو",
  "Email": "بريد إلكتروني",
  "Member Since": "عضو منذ",
  "Change avatar": "تغيير الصورة الرمزية",
  "Change language": "تغيير اللغة",
  "Name": "اسم",
  "name": "اسم",
  "Email address": "عنوان البريد الإلكتروني",
  "Password": "كلمة المرور",
  "Use password login": "التغيير إلى كلمة المرور لتسجيل الدخول",
  "Use email magic link login": "التغيير إلى تسجيل الدخول بالبريد الإلكتروني",
  "Don't have an account yet? Sign up now": "لا تملك حسابا حتى الآن؟ أفتح حساب الأن",
  "Documents": "وثائق",
  "Images and videos": "الصور ومقاطع الفيديو",
  "Help": "يساعد",
  "Log Out": "تسجيل خروج",
  "Player view": "عرض اللاعب",
  "content": "محتوى",
  "Success": "نجاح",
  "Avatar updated correctly": "تم تحديث الصورة الرمزية بشكل صحيح",
  "Error": "خطأ",
  "There was an error updating the avatar": "حدث خطأ أثناء تحديث الصورة الرمزية",
  "Upload error": "خطأ في التحميل",
  "Please try again": "حاول مرة اخرى",
  "File uploaded correctly": "تم تحميل الملف بشكل صحيح",
  "There was an error uploading the file": "حدث خطأ أثناء تحميل الملف",
  "Saved correctly in your media gallery": "تم الحفظ بشكل صحيح في معرض الوسائط الخاص بك",
  "There was an error saving the file": "حدث خطأ أثناء حفظ الملف",
  "You need to allow photos permission to Graasp": "تحتاج إلى السماح بإذن الصور لـ Graasp",
  "Go to Settings > Graasp > Photos > Select \"All the photos\"": "انتقل إلى الإعدادات > Graasp > الصور > حدد \"جميع الصور\"",
  "Folder": "مجلد",
  "Folder name": "إسم الملف",
  "Create": "يخلق",
  "You need to allow camera permission to Graasp": "تحتاج إلى السماح بإذن الكاميرا لـ Graasp",
  "Go to Settings > Graasp > Activate camera option": "انتقل إلى الإعدادات > Graasp > خيار تنشيط الكاميرا",
  "Take photo": "تصوير",
  "Select image from media gallery": "حدد صورة من معرض الوسائط",
  "You must sign in again": "يجب عليك تسجيل الدخول مرة أخرى",
  "Delete my account": "احذف حسابي",
  "Delete permanently": "الحذف بشكل نهائي",
  "Confirm deletion": "تأكيد الحذف",
  "Your account will be deleted permanently": "سيتم حذف حسابك نهائيا",
  "Sign In": "تسجيل الدخول",
  "Scan QR Code": "مسح رمز الاستجابة السريعة",
  "GO_TO_LINK_TEXT": "أو أدخل عنوان URL قصيرًا أدناه",
  "Bookmarks": "إشارات مرجعية",
  "Local Bookmarks": "الإشارات المرجعية المحلية",
  "My Items": "أشيائي",
  "url": "عنوان URL",
  "No bookmarks were found": "لم يتم العثور على إشارات مرجعية",
  "Local Bookmarks are not synced with an account.": "لا تتم مزامنة الإشارات المرجعية المحلية مع الحساب.",
  "Library": "مكتبة",
  "Last Update": "اخر تحديث",
  "FILTERS_NB": "المرشحات ({{نب}})",
  "Search Here...": "ابحث هنا...",
  "Filters": "المرشحات",
  "Apply": "يتقدم",
  "Clear": "واضح",
  "Submit": "يُقدِّم",
  "GO_TO_LINK_INPUT": "وصلة",
  "I already have an account": "لدي حساب بالفعل",
  "Create a new account": "انشاء حساب جديد",
  "Add to Bookmarks": "إضافة إلى المواقع المفضلة",
  "Remove from Bookmarks": "إزالة من الإشارات المرجعية",
  "Content": "محتوى"
}
